--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
       ],
     "require": {
         "php": "^8.0",
-        "guzzlehttp/guzzle": "*",
-        "illuminate/notifications": "*",
-        "illuminate/support": "*",
-        "kreait/laravel-firebase": "*",
-        "spatie/enum": "*"
+        "guzzlehttp/guzzle": "^6.2 || ^7.0",
+        "illuminate/notifications": "~5.6 || ~6.0 || ~7.0 || ~8.0 || ~9.0",
+        "illuminate/support": "~5.6 || ~6.0 || ~7.0 || ~8.0 || ~9.0",
+        "kreait/laravel-firebase": "^4.1",
+        "spatie/enum": "^2.3 || ^3.0"
     },
     "autoload": {
         "psr-4": {
